# SlangCompiler

./: .gitignore  AST.cpp  AST.hpp  CMakeLists.txt  CompilerOptions.hpp  Lexer.cpp  Lexer.hpp  Logger.hpp  Optimizer.cpp  Optimizer.hpp  Parser.cpp  Parser.hpp  README.md  Scope.hpp  TokenType.hpp  common.hpp  main.cpp
.github/workflows/: cmake.yml
analysis/: BasicAnalysis.cpp  BasicAnalysis.hpp  Check.cpp  Check.hpp  CheckDecl.cpp  CheckExpr.cpp  CheckStmt.cpp  Context.hpp  SymbolTable.hpp
check/: Check.cpp  Check.hpp  CheckDecl.cpp  CheckExpr.cpp  CheckStmt.cpp  Context.cpp  Context.hpp  SymbolTable.hpp
codegen/: CodeGen.cpp  CodeGen.hpp  CodeGenContext.hpp  CodeGenHelpers.cpp  DebugInfoBuilder.cpp  DebugInfoBuilder.hpp
driver/: Driver.cpp  Driver.hpp
examples/: StdFiles.sl  StdMath.sl  StdString.sl  classes.sl  f3.sl  formattedString.sl  funcOverloading.sl  import1.sl  import2.sl  indexesFails.sl  linkedList.sl  simplemath.sl  strings.sl  swap.sl  vec3f.sl  virtual.sl
lexer/: Lexer.cpp  Lexer.hpp  TokenType.hpp
log/: Logger.hpp
opt/: Optimizer.cpp  Optimizer.hpp
parser/: AST.cpp  AST.hpp  ASTBox.hpp  ASTFwdDecl.hpp  ParseDecl.cpp  ParseExp.cpp  ParseExpr.cpp  ParseStatement.cpp  ParseStmt.cpp  Parser.cpp  Parser.hpp  Scope.hpp
source/: SourceBuffer.cpp  SourceBuffer.hpp
tests/: StdMath.sl  StdString.sl  StdStringTests.txt  arrays.sl  arrays.txt  builder.py  classes.sl  classes.txt  classes2.sl  runTests.py  setSlangcPath.py  slangc_path.txt  virtual.sl  virtual.txt
